pxc/tests/test_004_passby/interf3.px
public namespace interf3;
import core::common -;

interface ifoo {
  public function void m() const;
}

struct foo < ifoo > {
  public function void m() const { println(v); }
  public int v;
}

function void t2(ifoo const& x)
{
  x.m();
}

function void t1() {
  ptr{ifoo} p = make_ptr(foo(5));
  ptr{ifoo} q = make_ptr(foo(10));
  *p = *q; // error
  p->m();
}

t1();
